Bug 298542 - Wrong ordering for remaining time fields
Summary: Wrong ordering for remaining time fields
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL: https://bugs.launchpad.net/ubuntu/+so...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-21 11:40 UTC by Maarten Bezemer
Modified: 2012-04-29 08:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maarten Bezemer 2012-04-21 11:40:00 UTC
Stopped torrents have empty value for remaining time.
In the ordering it is treated as if it was zero, while it'd be infinite.

Reproducible: Always
Comment 1 Joris Guisson 2012-04-29 08:37:44 UTC
Git commit 3728484ccd2dfdeb3940b706471094b3ee1fea85 by Joris Guisson.
Committed on 29/04/2012 at 10:37.
Pushed by guisson into branch 'master'.

Make TimeEstimator return sortable values

M  +1    -0    ChangeLog
M  +13   -10   src/torrent/timeestimator.cpp
M  +3    -0    src/torrent/timeestimator.h

http://commits.kde.org/libktorrent/3728484ccd2dfdeb3940b706471094b3ee1fea85
Comment 2 Joris Guisson 2012-04-29 08:40:00 UTC
Git commit 33acbc80130e6762a42c7a534be537f0d56011e9 by Joris Guisson.
Committed on 29/04/2012 at 10:39.
Pushed by guisson into branch 'master'.

Fix sorting of time left column

M  +1    -0    ChangeLog
M  +4    -9    ktorrent/view/viewmodel.cpp

http://commits.kde.org/ktorrent/33acbc80130e6762a42c7a534be537f0d56011e9