Fix sorting of time left column

BUG: 298542